# First_Project

components/First_Project_backend/: setup.cfg
components/First_Project_backend/Chats/adapters/: db.py
components/First_Project_backend/Chats/adapters/database/: db.py  tables.py
components/First_Project_backend/Chats/application/: dataclasses.py  interfaces.py
components/First_Project_backend/chats/adapters/chat_api/: app.py  auth.py  controllers.py
components/First_Project_backend/chats/adapters/database/: repositories.py  tables.py
components/First_Project_backend/chats/application/: dataclasses.py  interfaces.py  services.py
components/First_Project_backend/chats/composites/: chat_api.py
components/First_Project_backend/tests/unit/application/: conftest.py
components/First_Project_backend/tests/unit/application/services/: test_chat.py  test_chats.py  test_users.py
components/first_project_backend/chats/adapters/chat_api/: app.py  auth.py  controllers.py
components/first_project_backend/chats/adapters/database/: repositories.py  tables.py
components/first_project_backend/chats/application/: dataclasses.py  interfaces.py  services.py
components/first_project_backend/chats/composites/: chat_api.py
components/first_project_backend/tests/unit/: conftest.py
components/first_project_backend/tests/unit/application/: conftest.py
components/first_project_backend/tests/unit/application/services/: test_chat.py  test_chats.py  test_users.py
docs/: precedents.puml
