[metadata]
name = demo-project
version = 1.0.0
description = Проект chat-api, построенный по чистой архитектуре
author = Dmitry Ilyenko
author_email = Dmitry.Ilyenko@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.0

install_requires =
    attrs~=21.2.0
    PyJWT~=2.0.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    alembic~=1.7.0
    gunicorn~=20.0.0
    click~=7.1.0
    python-json-logger~=2.0.0
    classic-components~=1.0.0
    classic-aspects~=1.0.0
    classic-app-layer~=1.0.3
    classic-http-api~=1.0.1
    classic-http-auth~=1.0.0
    classic-sql-storage~=1.0.1
    classic-messaging~=1.0.0
    classic-messaging-kombu~=1.0.0

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

